; ModuleID = '/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio.c_rio_std_route_get_entry.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio.c_rio_std_route_get_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_mport = type { i32 }

@RIO_GLOBAL_TABLE = common dso_local global i64 0, align 8
@RIO_STD_RTE_CONF_DESTID_SEL_CSR = common dso_local global i32 0, align 4
@RIO_STD_RTE_CONF_PORT_SEL_CSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rio_mport*, i64, i64, i64, i64, i64*)* @rio_std_route_get_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rio_std_route_get_entry(%struct.rio_mport* %0, i64 %1, i64 %2, i64 %3, i64 %4, i64* %5) #0 {
  %7 = alloca %struct.rio_mport*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i64, align 8
  store %struct.rio_mport* %0, %struct.rio_mport** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  store i64* %5, i64** %12, align 8
  %14 = load i64, i64* %10, align 8
  %15 = load i64, i64* @RIO_GLOBAL_TABLE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %31

17:                                               ; preds = %6
  %18 = load %struct.rio_mport*, %struct.rio_mport** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i32, i32* @RIO_STD_RTE_CONF_DESTID_SEL_CSR, align 4
  %22 = load i64, i64* %11, align 8
  %23 = call i32 @rio_mport_write_config_32(%struct.rio_mport* %18, i64 %19, i64 %20, i32 %21, i64 %22)
  %24 = load %struct.rio_mport*, %struct.rio_mport** %7, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i32, i32* @RIO_STD_RTE_CONF_PORT_SEL_CSR, align 4
  %28 = call i32 @rio_mport_read_config_32(%struct.rio_mport* %24, i64 %25, i64 %26, i32 %27, i64* %13)
  %29 = load i64, i64* %13, align 8
  %30 = load i64*, i64** %12, align 8
  store i64 %29, i64* %30, align 8
  br label %31

31:                                               ; preds = %17, %6
  ret i32 0
}

declare dso_local i32 @rio_mport_write_config_32(%struct.rio_mport*, i64, i64, i32, i64) #1

declare dso_local i32 @rio_mport_read_config_32(%struct.rio_mport*, i64, i64, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
